demo-deploy/k8s/overlays/gke/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: biei
spec:
  parentRefs:
    - name: demo-gw
  hostnames:
    - biei-demo.mierune.dev
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: biei
          port: 8080
